; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/visualizer/extr_led_backlight_keyframes.c_keyframe_fade_all_leds_from_to.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/visualizer/extr_led_backlight_keyframes.c_keyframe_fade_all_leds_from_to.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LED_DISPLAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @keyframe_fade_all_leds_from_to to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @keyframe_fade_all_leds_from_to(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @fade_led_color(i32* %9, i32 %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @LUMA2COLOR(i32 %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* @LED_DISPLAY, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @gdispGClear(i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @fade_led_color(i32*, i32, i32) #1

declare dso_local i32 @LUMA2COLOR(i32) #1

declare dso_local i32 @gdispGClear(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
